feat: aplicando responsividade na tela de Login

--- a/Dima.Web/Pages/Identity/Login.razor
+++ b/Dima.Web/Pages/Identity/Login.razor
@@ -1,5 +1,15 @@
 @page "/login"
 @layout HeadlessLayout
 
-<h1>Login</h1>
-<h2>Tela de login</h2>
+<PageTitle>Entrar</PageTitle>
+
+<MudGrid Justify="Justify.Center">
+    <MudItem xs="12" sm="12" md="8" lg="6" xl="6" xxl="6">
+        <MudPaper Class="mud-width-full pa-8">
+            <div class="d-flex justify-center pb-8 pt-8">
+                <img src="imgs/dima.png" alt="Dima - Controle Financeiro" width="200" />
+            </div>
+            <h1>Autenticação</h1>
+        </MudPaper>
+    </MudItem>
+</MudGrid>
